Added Install dependencies step

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -359,7 +359,7 @@
   }
 </script>
 
-  <script type="module" crossorigin src="./assets/iframe-ZuwRROrt.js"></script>
+  <script type="module" crossorigin src="./assets/iframe-djN2D_qZ.js"></script>
 </head>
 
 <body>
